[package]
name = "ravalink-rust-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
nanoid = "0.4.0"
chrono = "0.4"
openssl = "0.10.52"
serenity = "0.12.2"
snafu = "0.7.4"
serde_json = "1.0.96"
async-trait = "0.1.68"
futures = "0.3.28"
lazy_static = "1.4.0"
tokio = { version = "1.28.1", features = ['full'] }
env_logger = "0.10.0"
async_fn_traits = "0.1.1"
rdkafka = { version = "0.31", features = ["cmake-build","ssl"] }

[dependencies.ravalink-interconnect]
git = "https://github.com/CrySteRz/ravalink-interconnect.git"